# gijzelijzer

./: .gitignore  CMakeLists.txt  README.rst
resources/: gijzelijzer.rc  gijzelijzer.vstxml  vstplug.def
src/: gijzelijzer.cpp  gijzelijzer.h  gijzelijzer_global.h  gijzelijzermain.cpp  gijzelijzerproc.cpp
test/src/: minieditor.cpp  vstapi.cpp
